test/errors/managedRecord.compopts
--detailed-errors # managedRecord-detailed.good
--no-detailed-errors # managedRecord-brief.good
